[gd_scene load_steps=4 format=3 uid="uid://qkulvveb5fr7"]

[ext_resource type="Script" uid="uid://dpnlyywty28df" path="res://scenes/GUI/town/forge_effects/card_forging_effect.gd" id="1_q07cv"]
[ext_resource type="PackedScene" uid="uid://b87sa86i8nwn5" path="res://scenes/GUI/town/forge_effects/forge_gathering_stream.tscn" id="1_trn88"]
[ext_resource type="PackedScene" uid="uid://dh8kq8yghiw40" path="res://scenes/GUI/town/forge_effects/forge_core_burst.tscn" id="3_mjf7g"]

[node name="CardForgingEffect" type="Node2D"]
script = ExtResource("1_q07cv")

[node name="ForgeGatheringStream" parent="." instance=ExtResource("1_trn88")]
unique_name_in_owner = true
visible = false

[node name="ForgeCoreBurst" parent="." instance=ExtResource("3_mjf7g")]
unique_name_in_owner = true
